--- a/package.json
+++ b/package.json
@@ -3,25 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+    // The "postinstall" script line is intentionally removed here
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "@vercel/kv": "latest",
+    "@vercel/postgres": "latest",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
+    "nanoid": "^5.0.7",
+    "next": "14.2.3",
+    "papaparse": "^5.4.1",
+    "playwright-core": "^1.43.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "@sparticuz/chromium": "^123.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.5",
-    "@eslint/eslintrc": "^3"
+    "@types/papaparse": "^5.3.10",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
