--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^123.0.1",
     "@vercel/kv": "latest",
     "@vercel/postgres": "latest",
     "axios": "^1.6.8",
@@ -18,18 +19,18 @@
     "papaparse": "^5.4.1",
     "playwright-core": "^1.43.0",
     "react": "^18",
-    "react-dom": "^18",
-    "@sparticuz/chromium": "^123.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/papaparse": "^5.3.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
